--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "YOUTUBE_API_KEY": "AIzaSyBo8V8SbDowhOPRykiFkr7vAdy6xlip-d0",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 100,
-  "PREFIX": "P,p",
+  "PREFIX": ".",
   "LOCALE": "en",
   "support_server": "",
   "PRUNING": false,
